# echo_8051

./: .gitignore  README.md  run_crossval.sh  tmp64qcrru_.v  tmpaz5i1wpr.v  tmpo0uby3g_.v  tmpo4kr1_q1.v  tmps9ihsigs.v
delivery/: README.md
model/cpp/: CMakeLists.txt
model/cpp/include/: alu.h  cpu.h  decoder.h  echo_8051.h  memory.h  types.h
model/cpp/src/: echo_8051.cpp
model/cpp/test/: test_main.cpp
model/python/: __init__.py  alu.py  cpu.py  decoder.py  echo_8051.py  hex_loader.py  instructions.py  memory.py  test_iss.py
openlane/echo_8051/: config.tcl
openlane/echo_8051/src/: area_report.txt  cpu_core.v  echo_8051_top.v  sfr_block.v  uart.v
phase0_spec/: delivery_standards.md  design_spec.md  modeling_plan.md  verification_plan.md
phase1_rtl/src/: cpu_core.v  psw.v  sfr_block.v  timer.v
phase2_sim/: Makefile  README.md  run_uvm.py  run_uvm.sh  test_isa.py  uvm_framework.py  uvm_report.md
phase3_synthesis/: README.md  run_synthesis.ps1  run_synthesis.sh  synthesis_report.md
requirements/: issues.md  requirements.md  research.md
rtl/: alu.v  cpu_core.v  intc.v  io_ports.v  iram.v  prom.v  reg_file.v
scripts/: asm_test.py  crossval_compare.py  crossval_cpp.cpp  crossval_iss.py  render_layout.rb
syn/: echo_8051_synth.v
system/: README.md  run.bat  run.sh  server.py
system/templates/: index.html
tb/: tb_crossval.v  tb_echo_8051.v
